QC-56 - Changed validation step on find by study test case. Update to SQL for confirming db move

--- a/eSourcePlatform/DCT/DCT.csproj
+++ b/eSourcePlatform/DCT/DCT.csproj
@@ -496,6 +496,18 @@
       <id>fa38a6f7-0802-4536-86a2-cca347ba41a7</id>
       <BoundTo>4a3c1e0b-ef34-4db7-bed5-0f3970a6ab5b</BoundTo>
     </Compile>
+    <Compile Include="DCT_Page\Validate_Results.cs">
+      <BoundTo>6e51144c-b191-41f0-bbec-31aabcb6e12b</BoundTo>
+      <DependentUpon>Validate_Results.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>7a94ca41-4ef7-4c99-8c3d-2f2aae2f79e2</id>
+    </Compile>
+    <Compile Include="DCT_Page\Validate_Results.UserCode.cs">
+      <BoundTo>6e51144c-b191-41f0-bbec-31aabcb6e12b</BoundTo>
+      <DependentUpon>Validate_Results.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>0b08a9f3-12c8-4650-8eee-e2df1ba7da31</id>
+    </Compile>
     <Compile Include="DebugConsole.cs">
       <BoundTo>81e9ee80-8575-4e62-858d-30b1055ecd25</BoundTo>
       <DependentUpon>DebugConsole.rxrec</DependentUpon>
@@ -1067,6 +1079,11 @@
       <BoundTo>9ed6b0f0-fd13-425f-b30f-73decc1816cd</BoundTo>
       <id>4a3c1e0b-ef34-4db7-bed5-0f3970a6ab5b</id>
       <recordtableid>acbe9a03-b8a8-4911-84b9-f167d001e7de</recordtableid>
+    </None>
+    <None Include="DCT_Page\Validate_Results.rxrec">
+      <BoundTo>9ed6b0f0-fd13-425f-b30f-73decc1816cd</BoundTo>
+      <id>6e51144c-b191-41f0-bbec-31aabcb6e12b</id>
+      <recordtableid>885255cd-9b2f-4a57-a86f-cbfee7c9aa57</recordtableid>
     </None>
     <None Include="DebugConsole.rxrec">
       <BoundTo>9ed6b0f0-fd13-425f-b30f-73decc1816cd</BoundTo>
